# VCSDevCoreTraining

./: .gitignore  KhungChuongTrinh_DevCoreAgent chuyên sâu.xlsx  README.md
1Basic/linuxSocketTest/: Makefile
1Basic/rat/client/: CMakeLists.txt  test.cpp  test1
1Basic/rat/client/include/: Client.hpp  ClientSocket.hpp  CommandManager.hpp
1Basic/rat/client/test/: testCommandManager.cpp
1Basic/rat/server/include/: EventLogger.hpp
1Basic/rat/server/src/: EventLogger.cpp  Server.cpp  ServerSocket.cpp  main.cpp
2SysProgBasic/21LinuxBasic/pthreadTest/: main  main.cpp  main2
2SysProgBasic/21LinuxBasic/test/: fork  fork.cpp
2SysProgBasic/22WinBasic/ws/client/: client.vcxproj  client.vcxproj.filters
2SysProgBasic/23Assignment/pmon/: .gitignore  pmon.sln
2SysProgBasic/23Assignment/pmon/include/: Event.hpp
2SysProgBasic/23Assignment/pmon/pmon/: pmon.vcxproj  pmon.vcxproj.filters
2SysProgBasic/23Assignment/pmon/pmonui/: pmonui.vcxproj
2SysProgBasic/23Assignment/pmon/src/: Configuration.cpp  Event.cpp  OverloadEvent.cpp  PmonController.cpp  PmonUIController.cpp  Process.cpp  Utils.cpp  pmon.cpp  pmonui.cpp
3Specialized/31ReverseEngineering/Assembly/bs/: bs.sln
3Specialized/31ReverseEngineering/FileInfectingVirus/: echo.exe.bak  echo.exe.i64
3Specialized/31ReverseEngineering/FileInfectingVirus/FileInfectingVirus/: FileInfectingVirus.sln
3Specialized/31ReverseEngineering/FileInfectingVirus/echo/: echo.cpp  echo.exe.asm
3Specialized/31ReverseEngineering/FileInfectingVirus/hacked/: hacked.cpp
3Specialized/31ReverseEngineering/PEReader/: PEReader.sln
3Specialized/31ReverseEngineering/PEReader/PEReader/: PEReader.cpp  PEReader.vcxproj  PEReader.vcxproj.filters  report.md
3Specialized/32WinUMHook/DllTest/: DllTest.sln
3Specialized/32WinUMHook/DllTest/Echo/: Echo.cpp  Echo.vcxproj
3Specialized/32WinUMHook/DllTest/MessageBox/: MessageBox.vcxproj  dllmain.cpp
3Specialized/32WinUMHook/DllTest/Redirect/: Redirect.cpp  Redirect.h  Redirect.vcxproj  Redirect.vcxproj.filters  dllmain.cpp  exports.def  pch.h
3Specialized/32WinUMHook/IATHook/: IATHook.sln
3Specialized/32WinUMHook/IATHook/FakeNotification/: FakeNotification.vcxproj  dllmain.cpp  framework.h
3Specialized/32WinUMHook/IATHook/Hook/: Hook.cpp  Hook.vcxproj
3Specialized/32WinUMHook/IATHook/Notifications/: Notifications.h  Notifications.vcxproj  Notifications.vcxproj.filters  dllmain.cpp  pch.h
3Specialized/32WinUMHook/IATHook/Test/: Notifications.lib  Test.cpp  Test.vcxproj
3Specialized/32WinUMHook/IATHook/TestASM/: TestASM.vcxproj  main.asm
3Specialized/32WinUMHook/IATHook/TestC/: TestC.cpp  TestC.vcxproj
3Specialized/32WinUMHook/Injections/: Injections.sln
3Specialized/32WinUMHook/Injections/DllInjection/: DllInjection.cpp  DllInjection.vcxproj
3Specialized/32WinUMHook/Injections/InteractiveCalculator/: InteractiveCalculator.cpp  InteractiveCalculator.vcxproj  InteractiveCalculator.vcxproj.filters
3Specialized/32WinUMHook/Injections/ReflectiveDllInjection/: ReflectiveDllInjection.cpp  ReflectiveDllInjection.vcxproj  ReflectiveDllInjection.vcxproj.filters
3Specialized/33WinKM/Legacy/ExampleDrv/: Driver.c
3Specialized/33WinKM/Minifilter/MiniAJiant/: .gitignore  README.md
3Specialized/33WinKM/Minifilter/SelfProtectedDriver/: SelfProtectedDriver.sln
3Specialized/33WinKM/NDIS/NetworkFilter/: NetworkFilter.sln
3Specialized/34WinKMHook/DKOM/: DKOM.sln
3Specialized/34WinKMHook/DKOM/DKOM/: DKOM.inf  DKOM.vcxproj  DKOM.vcxproj.filters  Driver.c  MFLTData.h  oldinf.txt
3Specialized/34WinKMHook/DKOM/DKOMUM/: DKOMUM.cpp  DKOMUM.vcxproj  DKOMUM.vcxproj.filters
3Specialized/34WinKMHook/DKOM/test/: test.cpp  test.vcxproj
3Specialized/35LinuxKM/HelloWorld/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd  Makefile  hello.c  hello.ko  hello.mod  hello.mod.c  modules.order  test.cpp
3Specialized/35LinuxKM/ProcessHider/: Makefile  ProcessHider.cpp  ProcessHiderKM.c  deploy.sh  meter.cpp  strace.out
basic/linuxSocketTest/: main  main.cpp
basic/rat/client/: CMakeUserPresets.json
basic/rat/client/include/: CommandManager.hpp
basic/rat/server/: CMakeLists.txt
basic/rat/server/include/: Server.hpp  ServerSocket.hpp
basic/rat/server/src/: Server.cpp  ServerSocket.cpp
um/pmon/: CMakeLists.txt  pmon.sln  pmon.vcxproj  pmon.vcxproj.filters
um/pmon/include/: Configuration.hpp  Event.hpp
um/pmon/include/pmon/: OverloadEvent.hpp  PmonController.hpp  Process.hpp
um/pmon/include/pmonui/: PmonUIController.hpp
um/pmon/include/utils/: EventLogger.hpp  FastSystem.hpp  Utils.hpp  WinSafe.hpp
um/pmon/pmon/src/: main.cpp
um/pmon/pmonui/: pmonui.vcxproj.filters
um/pmon/src/: Configuration.cpp  Event.cpp  EventLogger.cpp  FastSystem.cpp  OverloadEvent.cpp  PmonController.cpp  PmonUIController.cpp  Process.cpp  Utils.cpp  pmon.cpp  pmonui.cpp
(+111 files in other folders)
